wildcard on location

--- a/config/gateway.config.yml
+++ b/config/gateway.config.yml
@@ -21,6 +21,7 @@ apiEndpoints:
     location:
         paths:
             -   '/api/location'
+            -   '/api/location/*'
     account:
         paths:
             -   '/api/user'
